<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_name" translatable="false">Медиатека</string>
    <string name="settings_name" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_name" translatable="false">Поделиться приложением</string>
    <string name="support_name" translatable="false">Написать в поддержку</string>
    <string name="user_assets_name" translatable="false">Пользовательское соглашение</string>


    <string name="subject" translatable="false">Сообщение разработчиками и разработчицам приложения Playlist Maker</string>
    <string name="body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="address" translatable="false">mrmarwell@gmail.com</string>
    <string name="share_stroke" translatable="false">Поделитесь нашим приложением</string>
    <string name="noApp_stroke" translatable="false">Приложения для отправки отстуствуют!!!</string>
    <string name="shared_prefs_name" translatable="false">searchHistory</string>
    <string name="msg_youHasSearch" translatable="false">Вы искали</string>
    <string name="msg_cleanHistory" translatable="false">Очистить историю</string>


    <string name="msg_nothing_to_show" translatable="false">Ничего не нашлось</string>
    <string name="msg_no_internet_top" translatable="false">Проблемы со связью</string>
    <string name="msg_no_internet_bottom" translatable="false">Загрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="txt_nointernet_button" translatable="false">Обновить</string>


    <string name="Url_androidDeveloper" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="Url_userasset" translatable="false">https://yandex.ru/legal/practicum_offer/</string>


    <string name="txt_time_media" translatable="false">Длительность</string>
    <string name="txt_album_media" translatable="false">Альбом</string>
    <string name="txt_year_media" translatable="false">Год</string>
    <string name="txt_ganre_media" translatable="false">Жанр</string>
    <string name="txt_country_media" translatable="false">Страна</string>


    <string name="tab1txt" translatable="false">Избранные треки</string>
    <string name="tab2txt" translatable="false">Плейлисты</string>


<!--    Кнопки диалога создания плейлистов-->


    <string name="title" translatable="false">Завершить создание плейлиста?</string>
    <string name="text" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="positive" translatable="false">Завершить</string>
    <string name="negative" translatable="false">Отмена</string>


<!--    Добавление трека в плейлист-->
    <string name="add_in" translatable="false">Добавлено в плейлист</string>
    <string name="add_not" translatable="false"> Трек уже добавлен в плейлист</string>


<!--    PlaylistFragment-->
    <string name="playlist_content_title" translatable="false">Содержание плейлиста</string>
    <string name="playlist_size" translatable="false"> треков</string>

<!--    Склонение минут-->
    <string name="minute1" translatable="false">минута</string>
    <string name="minute2" translatable="false">минуты</string>
    <string name="minute3" translatable="false">минут</string>

<!--    PlayerFragment(music)-->
    <string name="tv_add_in_playlist" translatable="false">Добавить в плейлист</string>

<!--    addPlaylistFragment-->
    <string name="playlist_name_hint" translatable="false">Название*</string>
    <string name="playlist_body_hint" translatable="false">Описание</string>
    <string name="playlist_bt_text" translatable="false">Создать</string>
    <string name="playlist" translatable="false">Плейлист</string>
    <string name="created" translatable="false">создан</string>

<!--   Toolbar-->
    <string name="search_toolbar" translatable="false">Поиск</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="no_media" translatable="false">Ваша медиатека пуста</string>
    <string name="no_playlist" translatable="false">Вы не создали \n ни одного плейлиста</string>
    <string name="playlist_placeholder_content_description">Плейсхолдер плейлиста</string>



<!--    Склонение трека-->
    <string name="track1" translatable="false">трек</string>
    <string name="track2" translatable="false">треков</string>
    <string name="track3" translatable="false">трека</string>


<!--    Диалог Удаление трека-->
    <string name="track_dialogue_title" translatable="false">Хотите удалить трек?</string>
    <string name="track_dialogue_message" translatable="false"> </string>
    <string name="track_dialogue_positive" translatable="false">Да</string>
    <string name="track_dialogue_negative" translatable="false">Нет</string>


<!--    Bottom Menu в Плейлистах ( доп меню)-->
    <string name="share_playlist" translatable="false">Поделиться</string>
    <string name="replace_playlist_info" translatable="false">Редактировать информацию</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>


    <string name="share_playlist_title" translatable="false">Share APK</string>
    <string name="no_possible_share_playlist" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>


<!--    Удаление плейлиста в меню управления плейлистами-->
    <string name="delete_playlist_dialogue" translatable="false">Хотите удалить плейлист</string>





    <string name="replace_playlist_title" translatable="false">Редактирование плейлиста</string>
    <string name="replace_playlist_button" translatable="false">Сохранить</string>






</resources>