<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp"
     android:id="@+id/settings"
    tools:context=".SettingsActivity"
    >




    <androidx.appcompat.widget.Toolbar
        android:id ="@+id/settings_toolbar_day"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Toolbar_height"
        app:title="@string/Settings_name"
        app:titleTextAppearance="@style/TitleTextStyle"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/backlight"

        >
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/dark_theme"
        android:textSize="16sp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:textColor="@color/black"
        />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:drawableEnd="@drawable/sharelight"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/share_name"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:drawableEnd="@drawable/support_new"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/support_name"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:drawableEnd="@drawable/userassetlight"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/user_assets_name"
        android:textSize="16sp"
        android:textColor="@color/black"/>



</LinearLayout>




