<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="0dp"
    android:id="@+id/settings"
    tools:context=".SettingsActivity"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="56"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Settings_name"
            android:textColor="@color/white"
            android:textSize="@dimen/st_head_text_size"
            style="@style/BoldTextStyle"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_head"
            android:layout_marginTop="@dimen/margin_top_head"
            android:layout_marginBottom="@dimen/margin_bottom_head"
            android:gravity="center_vertical"/>





        <!-- Переключатель -->


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="61">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:paddingStart="@dimen/standart_padding_start"
            android:text="@string/dark_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/standart_text_size"
            android:gravity="center_vertical"/>

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="6dp"
            android:paddingStart="@dimen/standart_padding_start"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:gravity="center_vertical"
            android:theme="@style/Switch_Style"
            />
    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="61"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:paddingStart="@dimen/standart_padding_start"
            android:text="@string/share_name"
            android:textColor="@color/white"
            android:textSize="@dimen/standart_text_size"
            android:gravity="center_vertical"
            />

        <ImageButton

            android:layout_width="@dimen/standart_size_for_icon"
            android:layout_height="@dimen/standart_size_for_icon"
            android:layout_marginEnd="@dimen/standart_marginEnd_icon"
            android:layout_marginTop="@dimen/standart_margin_top_icon"
            android:layout_marginBottom="@dimen/standart_margin_bottom_icon"
            android:src="@drawable/share_dark"
            android:backgroundTint="@color/black"
            android:layout_gravity="end"

            >
        </ImageButton>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="61"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/support_name"
            android:textColor="@color/white"
            android:textSize="@dimen/standart_text_size"
            android:paddingStart="@dimen/standart_padding_start"
            android:gravity="center_vertical"

            />

        <ImageButton

            android:layout_width="@dimen/standart_size_for_icon"
            android:layout_height="@dimen/standart_size_for_icon"
            android:layout_marginEnd="@dimen/standart_marginEnd_icon"
            android:layout_marginTop="@dimen/standart_margin_top_icon"
            android:layout_marginBottom="@dimen/standart_margin_bottom_icon"
            android:src="@drawable/dark_mode_support"
            android:layout_gravity="end"
            android:backgroundTint="@color/black"
            >
        </ImageButton>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
android:layout_weight="61"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:paddingStart="@dimen/standart_padding_start"
            android:text="Пользовательское соглашение"
            android:textColor="@color/white"
            android:textSize="@dimen/standart_text_size"
            android:gravity="center_vertical"
            />

        <ImageButton

            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_marginEnd="@dimen/standart_marginEnd_icon"
            android:layout_marginTop="@dimen/standart_margin_top_icon"
            android:layout_marginBottom="@dimen/standart_margin_bottom_icon"
            android:backgroundTint="@color/black"
            android:src="@drawable/user_assets_dark"
            android:layout_gravity="end">

        </ImageButton>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="476">

    </FrameLayout>

</LinearLayout>

