
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Settings_Day_night_style"
    android:orientation="vertical"
>
    <TextView
        android:id="@+id/tvCountry"
        style="@style/media_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="end"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tvGenre"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginBottom="8dp"
        tools:text="Великобритания" />
    <TextView
        android:id="@+id/tvGenre"
        style="@style/media_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="end"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCountry"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tvYear"
        app:layout_constraintHorizontal_bias="1"
        tools:text="Rock" />
    <TextView
        android:id="@+id/tvYear"
        style="@style/media_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="end"
        android:paddingVertical="8dp"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvGenre"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvAlbum"
        app:layout_constraintHorizontal_bias="1"
        tools:text="1965" />
    <TextView
        android:id="@+id/tvAlbum"
        android:paddingLeft="10dp"
        style="@style/media_tv_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="end"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvYear"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/tv_album_left"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        app:layout_constraintHorizontal_bias="1"
        tools:text="Yesterday(Remastered)" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="8dp"
        style="@style/media_tv_left"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:text="@string/txt_ganre_media" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="8dp"
        style="@style/media_tv_left"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_album_left"
        android:text="@string/txt_year_media" />
    <TextView
        android:id="@+id/tv_album_left"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="8dp"
        style="@style/media_tv_left"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:text="@string/txt_album_media" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Search_Toolbar_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_backblack_16">
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/imMine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/ic_launcher_background"

        />
    <TextView
        android:id="@+id/tvTrackName"
        style="@style/media_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/st_head_text_size_22sp"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/imMine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imMine"
        app:layout_constraintTop_toBottomOf="@+id/imMine"
        tools:text="Название трека"

        />
    <TextView
        tools:text = "Исполнитель"
        style="@style/media_tv_title"
        android:id="@+id/tvGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_size_14"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/tvTrackName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTrackName"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackName"
        app:layout_constraintVertical_bias="0.62"
        />
    <ImageView
        android:id="@+id/add_on_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/imMine"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:srcCompat="@drawable/ic_plus_51dp" />

    <com.example.playlistmaker.presentation.player.utils.PlaybackButtonView
        android:id="@+id/play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/like"

        app:layout_constraintStart_toEndOf="@+id/add_on_playlist"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:pauseImage="@drawable/ic_pause_100"
        app:playImage="@drawable/ic_play_100" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toEndOf="@+id/imMine"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:srcCompat="@drawable/ic_like_51dp" />

    <ImageView
        android:id="@+id/dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toEndOf="@+id/imMine"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:srcCompat="@drawable/ic_like_red_51dp" />

    <TextView
        style="@style/media_tv_left"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="8dp"
        android:text="@string/txt_time_media"
        app:layout_constraintBottom_toTopOf="@id/tv_album_left"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.5"

        app:layout_constraintVertical_chainStyle="spread_inside"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="8dp"
        style="@style/media_tv_left"
android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:text="@string/txt_country_media"
        />

    <TextView
        android:id="@+id/tvTime"

        style="@style/media_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="end"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAlbum"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="spread_inside"


        tools:text="5:35" />

    <TextView
        android:id="@+id/progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/play" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5263749" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03892944" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44219977" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06285073" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73176205" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09203143" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        />


    <LinearLayout
        android:id="@+id/bottom_sheet"
        style="@style/baseDayAndNightTextStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_shape"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="8dp"

            app:srcCompat="@drawable/ic_bottom_rectangle" />

        <TextView
            android:id="@+id/textView"
            style="@style/baseDayAndNightTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/tv_add_in_playlist"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bt_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/bt_new_playlist"


            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="1dp"

            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>